# rustile

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CODE_EXPLANATION.md  Cargo.toml  LICENSE  README.md  RETROSPECTIVE.md  check.sh  config.example.toml  install.sh  setup_config.sh  switch_layout.sh  test.sh  test_bsp.sh  test_focus.sh  test_fullscreen.sh  test_layout.sh  test_rustile.sh  todo.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  claude.yml  dependabot-auto-merge.yml  release.yml
docs/: ARCHITECTURE.md  BEGINNER_GUIDE.md  CODE_EXPLANATION.md  HOW_RUSTILE_WORKS.md  IMPLEMENTATION_DETAILS.md  PROJECT_STRUCTURE.md  ROADMAP.md  TECHNICAL_DEEP_DIVE.md
docs/adr/: 000-template-adr-based.md  000-template-spec-driven.md  000-template.md  001-rotate-window-implementation.md  002-single-source-of-truth-architecture.md  003-srp-refactoring-three-module-architecture.md  004-x11-event-registration-strategy.md  005-code-comment-standard.md  006-configure-request-timeout-handling.md  007-x11-keyboard-mapping-understanding.md  008-x11-modifier-system-and-shortcuts.md  009-unify-keyboard-modules-into-shortcut-manager.md  010-zoom-to-parent-feature.md  011-bsp-screen-rect-separation.md  012-config-file-handling-improvement.md  INDEX.md  (+9 more)
scripts/: README.md  dev-tools.sh
src/: bsp.rs  config.rs  event_handler.rs  keyboard.rs  keys.rs  layout.rs  layout.rs.backup  lib.rs  main.rs  window_manager.rs  window_operations.rs  window_renderer.rs  window_state.rs  workspace.rs  workspace_renderer.rs
tests/: integration_test.rs
(+27 files in other folders)
