[package]
name = "rustile"
version = "1.3.2"
edition = "2024"
authors = ["d-matsui"]
description = "A lightweight tiling window manager written in Rust"
repository = "https://github.com/d-matsui/rustile"
license = "MIT"
keywords = ["window-manager", "tiling", "x11", "linux", "desktop"]
categories = ["gui"]
readme = "README.md"

[dependencies]
x11rb = "0.13.2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
xkeysym = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
toml = "0.9"
